policies/kyverno/restrict-image-registries.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restrict-image-registries
spec:
  validationFailureAction: Enforce
  rules:
    - name: only-acr-images
      match:
        resources:
          kinds:
            - Pod
      exclude:
        resources:
          namespaces:
            - kyverno
            - argo-rollouts
      validate:
        message: "Only images from Azure Container Registry are allowed"
        pattern:
          spec:
            containers:
              - image: "gitopsacradharsh.azurecr.io/*"
